--- a/main.html
+++ b/main.html
@@ -8,6 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+ <nav>
+	 <ul>
+		 <li>
+             <a herf="#home">Home</a>
+		 </li>
+		 <li>
+			 <a herf="#about">About us</a>
+		 </li>
+		  <li>
+			 <a herf="#contact">Contact us</a>
+		 </li>
+	 </ul>
+ </nav>
+
+<h1>3 random videos</h1>
+<video controls>
+	<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+</video>
+
+<video controls>
+	<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4 ">
+</video>
+
+<video controls>
+	<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">
+</video> 
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
