--- a/main.html
+++ b/main.html
@@ -8,32 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
- <nav>
-	 <ul>
-		 <li>
-             <a herf="#home">Home</a>
-		 </li>
-		 <li>
-			 <a herf="#about">About us</a>
-		 </li>
-		  <li>
-			 <a herf="#contact">Contact us</a>
-		 </li>
-	 </ul>
- </nav>
+  <nav>
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About us</a></li>
+    <li><a href="#contact">Contact us</a></li>
+  </ul>
+</nav>
 
-<h1>3 random videos</h1>
+<!-- Videos -->
+<h2>3 random videos</h2>
+
 <video controls>
-	<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+   
 </video>
 
 <video controls>
-	<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4 ">
+  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+   
 </video>
 
 <video controls>
-	<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">
-</video> 
+  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
+</video>
 	
     <script type="text/javascript" src="./script.js">
 </script>
